Deleted body margins, deleted date polyfill, fixed body height and width and fixed opening and closing menu on mobile

--- a/css/desktop/search-bar.css
+++ b/css/desktop/search-bar.css
@@ -8,8 +8,9 @@
 
     .search-bar__logo
     {
-        padding: 0 10px 0 10px;
-        font-size: 42px;
+        padding: 0 10px;
+        margin: auto 0;
+        font-size: 5vh;
         float: left;
     }
 
@@ -20,17 +21,17 @@
 
     .search-bar__button
     {
-        margin: 5px;
-        margin-left: 10px;
+        margin: 5px 5px 0 10px;
         width: 60px;
         float: right;
-        height: 88%;
+        height: 85%;
     }
 
     .search-bar__input
     {
+        font-size: 2vw;        
         width: 100%;
-        height: 75%;    
+        height: 85%;    
         margin: 5px;    
     }
 }
