--- a/index-desktop.css
+++ b/index-desktop.css
@@ -6,11 +6,18 @@
 
 @media (min-width:800px)
 {
+    html, body
+    {
+        margin: 0;
+        height: 100vh;
+    }
+
     .body
     {
         display: grid;
         background: #c9dff5;
         width: 100%;
+        min-height: 100%;
     }
 
     .phone-sandwich
