--- a/index-pad.css
+++ b/index-pad.css
@@ -5,9 +5,15 @@
 
 @media (min-width: 480px) and (max-width: 800px)
 {
-    .body
+    body
     {
+        margin: 0;
+    }
+
+    .body
+    {      
         background: #c9dff5;
+        height: 100%;
     }
 
     .phone-sandwich
