--- a/index-phone.css
+++ b/index-phone.css
@@ -6,6 +6,11 @@
 
 @media (max-width: 480px)
 {
+    body
+    {
+        margin: 0;
+    }
+
     :root
     {
         --mainColor: #c9dff5;
